added pdf page layouts updated html

--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Straight to the Point Staff</title>
+    <title>Straight to the Point Services</title>
   </head>
   <body>
     <header>
@@ -16,19 +16,19 @@
       <a href="staff.html">Staff</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <aside class="staff-sidebar">
-     <h3>Our Team</h3>
-     <ul>
-       <li><a href="#">Giap Nguyen</a></li>
-       <li><a href="#">Derek Jenkins</a></li>
-       <li><a href="#">Amy Smith</a></li>
-       <li><a href="#">Nathan Lee</a></li>
-     </ul>
+    <aside class="services-sidebar">
+      <h3>Services</h3>
+      <ul>
+        <li><a href="#">Classes</a></li>
+        <li><a href="#">Private Lessons</a></li>
+        <li><a href="#">Group Events</a></li>
+        <li><a href="#">Tournaments</a></li>
+      </ul>
     </aside>
-    <article class="profiles">
-      <h1>Meet the Team</h1>
+    <section class="intro">
+      <h1>Come Join Us</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque sit amet mi non fringilla. Proin quam ante, elementum et sapien dictum, ornare tempus lectus. Vivamus non orci ut nibh commodo lacinia quis id ligula. Nullam ultrices orci ut semper iaculis. Aenean non mi vehicula, dapibus nibh vel, vulputate odio. Suspendisse commodo risus quis porta volutpat. Nam neque sem, pulvinar sit amet malesuada at, congue nec risus. Donec eget diam sit amet orci efficitur egestas et nec dui. Etiam rutrum gravida risus, id dictum elit porttitor vitae. Integer viverra, purus eget volutpat venenatis, justo risus pellentesque est, sit amet fermentum ipsum sapien a massa. Nulla facilisi. Proin id mi auctor, pharetra elit sed, posuere nisl. Morbi tempus scelerisque lacus eget tempus.</p>
-    </article>
+    </section>
     <footer>
       <figure class="footer-image">
         <img src="images/footerImage.jpg" alt="archery academy footer image" width="1628" height="250">
