--- a/about.html
+++ b/about.html
@@ -2,31 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Straight to the Point Staff</title>
+    <title>About Straight to the Point Archery</title>
   </head>
   <body>
     <header>
       <figure class="logo-banner">
         <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
       </figure>
+      <nav class="main-nav">
+        <a href="#">Home</a>
+        <a href="#">Services</a>
+        <a href="#">Staff</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
     </header>
-    <nav class="main-nav">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="staff.html">Staff</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <aside class="staff-sidebar">
-     <h3>Our Team</h3>
-     <ul>
-       <li><a href="#">Giap Nguyen</a></li>
-       <li><a href="#">Derek Jenkins</a></li>
-       <li><a href="#">Amy Smith</a></li>
-       <li><a href="#">Nathan Lee</a></li>
-     </ul>
-    </aside>
-    <article class="profiles">
-      <h1>Meet the Team</h1>
+    <article class="intro">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque sit amet mi non fringilla. Proin quam ante, elementum et sapien dictum, ornare tempus lectus. Vivamus non orci ut nibh commodo lacinia quis id ligula. Nullam ultrices orci ut semper iaculis. Aenean non mi vehicula, dapibus nibh vel, vulputate odio. Suspendisse commodo risus quis porta volutpat. Nam neque sem, pulvinar sit amet malesuada at, congue nec risus. Donec eget diam sit amet orci efficitur egestas et nec dui. Etiam rutrum gravida risus, id dictum elit porttitor vitae. Integer viverra, purus eget volutpat venenatis, justo risus pellentesque est, sit amet fermentum ipsum sapien a massa. Nulla facilisi. Proin id mi auctor, pharetra elit sed, posuere nisl. Morbi tempus scelerisque lacus eget tempus.</p>
     </article>
     <footer>
