--- a/index.html
+++ b/index.html
@@ -5,28 +5,30 @@
     <title>Straight to the Point Home</title>
   </head>
   <body>
-    <header>
-      <figure class="logo-banner">
-        <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
-      </figure>
-    </header>
-    <nav class="main-nav">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="staff.html">Staff</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <article class="intro">
-      <h1>About Straight to the Point Archery</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque sit amet mi non fringilla. Proin quam ante, elementum et sapien dictum, ornare tempus lectus. Vivamus non orci ut nibh commodo lacinia quis id ligula. Nullam ultrices orci ut semper iaculis. Aenean non mi vehicula, dapibus nibh vel, vulputate odio. Suspendisse commodo risus quis porta volutpat. Nam neque sem, pulvinar sit amet malesuada at, congue nec risus. Donec eget diam sit amet orci efficitur egestas et nec dui. Etiam rutrum gravida risus, id dictum elit porttitor vitae. Integer viverra, purus eget volutpat venenatis, justo risus pellentesque est, sit amet fermentum ipsum sapien a massa. Nulla facilisi. Proin id mi auctor, pharetra elit sed, posuere nisl. Morbi tempus scelerisque lacus eget tempus.</p>
-    </article>
-    <footer>
-      <figure class="footer-image">
-        <img src="images/footerImage.jpg" alt="archery academy footer image" width="1628" height="250">
-      </figure>
-      <address class="contact-info">
-        Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br> archery-education@example.com <br> (253)555-1010
-      </address>
-    </footer>
+    <div class="wrapper">
+      <header>
+        <figure class="logo-banner">
+          <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
+        </figure>
+      </header>
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="staff.html">Staff</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+      <article class="intro">
+        <h1>About Straight to the Point Archery</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque sit amet mi non fringilla. Proin quam ante, elementum et sapien dictum, ornare tempus lectus. Vivamus non orci ut nibh commodo lacinia quis id ligula. Nullam ultrices orci ut semper iaculis. Aenean non mi vehicula, dapibus nibh vel, vulputate odio. Suspendisse commodo risus quis porta volutpat. Nam neque sem, pulvinar sit amet malesuada at, congue nec risus. Donec eget diam sit amet orci efficitur egestas et nec dui. Etiam rutrum gravida risus, id dictum elit porttitor vitae. Integer viverra, purus eget volutpat venenatis, justo risus pellentesque est, sit amet fermentum ipsum sapien a massa. Nulla facilisi. Proin id mi auctor, pharetra elit sed, posuere nisl. Morbi tempus scelerisque lacus eget tempus.</p>
+      </article>
+      <footer>
+        <figure class="footer-image">
+          <img src="images/footerImage.jpg" alt="archery academy footer image" width="1628" height="250">
+        </figure>
+        <address class="contact-info">
+          Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br> archery-education@example.com <br> (253)555-1010
+        </address>
+      </footer>
+    </div>
   </body>
 </html>
