--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Straight to the Point Home</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <div class="wrapper">
@@ -12,10 +13,10 @@
         </figure>
       </header>
       <nav class="main-nav">
-        <a href="index.html">Home</a>
-        <a href="services.html">Services</a>
-        <a href="staff.html">Staff</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html" class="home">Home</a>
+        <a href="services.html" class="services">Services</a>
+        <a href="staff.html" class="staff">Staff</a>
+        <a href="contact.html" class="contact">Contact</a>
       </nav>
       <article class="intro">
         <h1>About Straight to the Point Archery</h1>
@@ -23,7 +24,7 @@
       </article>
       <footer>
         <figure class="footer-image">
-          <img src="images/footerImage.jpg" alt="archery academy footer image" width="1628" height="250">
+          <img src="" alt="archery academy footer image" width="1628" height="250">
         </figure>
         <address class="contact-info">
           Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br> archery-education@example.com <br> (253)555-1010
