--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Straight to the Point Home</title>
+    <script src="https://kit.fontawesome.com/5398a5e1fc.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
@@ -11,6 +12,7 @@
         <figure class="logo-banner">
           <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
         </figure>
+        <p class="social"><i class="fab fa-facebook-square"></i><i class="fab fa-instagram-square"></i><i class="fab fa-yelp"></i></p>
       </header>
       <nav class="main-nav">
         <a href="index.html" class="home">Home</a>
@@ -24,10 +26,11 @@
       </article>
       <footer>
         <figure class="footer-image">
-          <img src="" alt="archery academy footer image" width="1628" height="250">
+          <img src="images/archeryAcademy-logo-white.png" alt="archery academy footer image" width="250" height="100">
         </figure>
         <address class="contact-info">
-          Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br> archery-education@example.com <br> (253)555-1010
+          <h3>Contact Info</h3>
+          <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><i class="fas fa-globe-americas"></i> archery-education@example.com <br><i class="fas fa-phone-volume"></i> (253)555-1010
         </address>
       </footer>
     </div>
