--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Straight to the Point Home</title>
     <script src="https://kit.fontawesome.com/5398a5e1fc.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
     <div class="wrapper">
