--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Straight to the Point Archery Contact</title>
+    <script src="https://kit.fontawesome.com/5398a5e1fc.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
+  <div class="wrapper">
     <header>
       <figure class="logo-banner">
         <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
@@ -18,19 +21,21 @@
     </nav>
     <section class="map">
       <h2>Straight to the Point Archery</h2>
-      <p>Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br> archery-education@example.com <br> (253)555-1010</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2707.984442649868!2d-122.442195!3d47.256007499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549055a0a30c1beb%3A0x39ff45769ef4371b!2sTacoma%20City%20Hall!5e0!3m2!1sen!2sus!4v1606429326222!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
-    <section class="contact-info">
+    <section class="location">
       <h2>Contact Us</h2>
-
+      <p>Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br> archery-education@example.com <br> (253)555-1010</p>
     </section>
     <footer>
       <figure class="footer-image">
-        <img src="images/footerImage.jpg" alt="archery academy footer image" width="1628" height="250">
+        <img src="images/archeryAcademy-logo-white.png" alt="archery academy footer image" width="250" height="100">
       </figure>
       <address class="contact-info">
-        Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br> archery-education@example.com <br> (253)555-1010
+        <h3>Contact Info</h3>
+        <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><i class="fas fa-globe-americas"></i> archery-education@example.com <br><i class="fas fa-phone-volume"></i> (253)555-1010
       </address>
     </footer>
+  </div>
   </body>
 </html>
