updated styling for staff page

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
       <figure class="logo-banner">
         <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
       </figure>
+      <p class="social"><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com"><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com"><i class="fab fa-yelp"></i></a></p>
     </header>
     <nav class="main-nav">
       <a href="index.html">Home</a>
@@ -25,7 +26,7 @@
     </section>
     <section class="location">
       <h2>Contact Us</h2>
-      <p>Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br> archery-education@example.com <br> (253)555-1010</p>
+      <p>Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br><a href="mailto:someone@example.com"> archery-education@example.com</a> <br> (253)555-1010</p>
     </section>
     <footer>
       <figure class="footer-image">
@@ -33,7 +34,7 @@
       </figure>
       <address class="contact-info">
         <h3>Contact Info</h3>
-        <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><i class="fas fa-globe-americas"></i> archery-education@example.com <br><i class="fas fa-phone-volume"></i> (253)555-1010
+        <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><a href="mailto:someone@example.com"><i class="fas fa-globe-americas"></i> archery-education@example.com</a><br><i class="fas fa-phone-volume"></i> (253)555-1010
       </address>
     </footer>
   </div>
