--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <figure class="logo-banner">
           <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
         </figure>
-        <p class="social"><i class="fab fa-facebook-square"></i><i class="fab fa-instagram-square"></i><i class="fab fa-yelp"></i></p>
+        <p class="social"><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com"><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com"><i class="fab fa-yelp"></i></a></p>
       </header>
       <nav class="main-nav">
         <a href="index.html" class="home">Home</a>
@@ -21,16 +21,19 @@
         <a href="contact.html" class="contact">Contact</a>
       </nav>
       <article class="intro">
-        <h1>About Straight to the Point Archery</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque sit amet mi non fringilla. Proin quam ante, elementum et sapien dictum, ornare tempus lectus. Vivamus non orci ut nibh commodo lacinia quis id ligula. Nullam ultrices orci ut semper iaculis. Aenean non mi vehicula, dapibus nibh vel, vulputate odio. Suspendisse commodo risus quis porta volutpat. Nam neque sem, pulvinar sit amet malesuada at, congue nec risus. Donec eget diam sit amet orci efficitur egestas et nec dui. Etiam rutrum gravida risus, id dictum elit porttitor vitae. Integer viverra, purus eget volutpat venenatis, justo risus pellentesque est, sit amet fermentum ipsum sapien a massa. Nulla facilisi. Proin id mi auctor, pharetra elit sed, posuere nisl. Morbi tempus scelerisque lacus eget tempus.</p>
+        <h1>Straight to the Point Archery</h1>
+        <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors. We utilize an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field</p><p>We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques. From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport.</p><p>Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments. Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.</p><p>Staffed by instructors that are qualified level 1 and level 2 instructors and have met the safety requirements of the USA Archery (USAA). We teach in a positive learning environment.  Our instructors also have extensive knowledge of the most advanced archery equipment and all forms of archery from the traditional long bow to the modern compound. Straight to the Point Archery also has specific instructors for recreational archery, competitive archery and bow hunting.</p><p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
       </article>
+      <section class="intro-video">
+          <iframe src="https://player.vimeo.com/video/212609725" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe><p><a href="https://vimeo.com/212609725">USA Archery - Goal Setting</a> from <a href="https://vimeo.com/alindemann">Andrew Lindemann</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+      </section>
       <footer>
         <figure class="footer-image">
           <img src="images/archeryAcademy-logo-white.png" alt="archery academy footer image" width="250" height="100">
         </figure>
         <address class="contact-info">
           <h3>Contact Info</h3>
-          <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><i class="fas fa-globe-americas"></i> archery-education@example.com <br><i class="fas fa-phone-volume"></i> (253)555-1010
+          <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><a href="mailto:someone@example.com"><i class="fas fa-globe-americas"></i> archery-education@example.com</a><br><i class="fas fa-phone-volume"></i> (253)555-1010
         </address>
       </footer>
     </div>
