--- a/staff.html
+++ b/staff.html
@@ -12,6 +12,7 @@
       <figure class="logo-banner">
         <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
       </figure>
+      <p class="social"><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com"><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com"><i class="fab fa-yelp"></i></a></p>
     </header>
     <nav class="main-nav">
       <a href="index.html">Home</a>
@@ -22,15 +23,43 @@
     <aside class="staff-sidebar">
      <h3>Our Team</h3>
      <ul>
-       <li><a href="#">Giap Nguyen</a></li>
-       <li><a href="#">Derek Jenkins</a></li>
-       <li><a href="#">Amy Smith</a></li>
-       <li><a href="#">Nathan Lee</a></li>
+       <li><a href="#member-one">Giap Nguyen</a></li>
+       <li><a href="#member-two">Derek Jenkins</a></li>
+       <li><a href="#member-three">Amy Smith</a></li>
+       <li><a href="#member-four">Nathan Lee</a></li>
      </ul>
     </aside>
     <article class="profiles">
       <h1>Meet the Team</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque sit amet mi non fringilla. Proin quam ante, elementum et sapien dictum, ornare tempus lectus. Vivamus non orci ut nibh commodo lacinia quis id ligula. Nullam ultrices orci ut semper iaculis. Aenean non mi vehicula, dapibus nibh vel, vulputate odio. Suspendisse commodo risus quis porta volutpat. Nam neque sem, pulvinar sit amet malesuada at, congue nec risus. Donec eget diam sit amet orci efficitur egestas et nec dui. Etiam rutrum gravida risus, id dictum elit porttitor vitae. Integer viverra, purus eget volutpat venenatis, justo risus pellentesque est, sit amet fermentum ipsum sapien a massa. Nulla facilisi. Proin id mi auctor, pharetra elit sed, posuere nisl. Morbi tempus scelerisque lacus eget tempus.</p>
+      <p class="staff-intro">Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
+      <section id="member-one">
+        <figure>
+          <img class="profile-one"src="images/instructor-bio-image4.png" alt="staff member profile photo" width="200">
+        </figure>
+        <h3>Giap Nguyen</h3>
+        <p>Giap Nguyen started Straight to the Point Archery in 2005. He's an avid and accomplished archer himself, having competed with the United States Archery Team in the 2000 Summer Olympics. He has three children, and  started Straight to the Point in part because he was not satisfied with the archery eduction options for them in Tacoma. After The Hunger Games books and movies came out, he noticed a surge in popularity of archery among young people, especially young women, and the business has been booming ever since.</p>
+      </section>
+      <section id="member-two">
+        <figure>
+          <img class="profile-two"src="images/instructor-bio-image1.png" alt="staff member profile photo" width="200">
+        </figure>
+        <h3>Derek Jenkins</h3>
+        <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
+      </section>
+      <section id="member-three">
+        <figure>
+          <img class="profile-three"src="images/instructor-bio-image2.png" alt="staff member profile photo" width="200">
+        </figure>
+        <h3>Amy Smith</h3>
+        <p>Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.</p>
+      </section>
+      <section id="member-four">
+        <figure>
+          <img class="profile-four"src="images/instructor-bio-image3.png" alt="staff member profile photo" width="200">
+        </figure>
+        <h3>Nathan Lee</h3>
+        <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
+      </section>
     </article>
     <footer>
       <figure class="footer-image">
@@ -38,7 +67,7 @@
       </figure>
       <address class="contact-info">
         <h3>Contact Info</h3>
-        <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><i class="fas fa-globe-americas"></i> archery-education@example.com <br><i class="fas fa-phone-volume"></i> (253)555-1010
+        <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><a href="mailto:someone@example.com"><i class="fas fa-globe-americas"></i> archery-education@example.com</a><br><i class="fas fa-phone-volume"></i> (253)555-1010
       </address>
     </footer>
   </div>
