updated styling and headers

--- a/services.html
+++ b/services.html
@@ -82,9 +82,9 @@
         <img src="images/archeryAcademy-logo-white.png" alt="archery academy footer image" width="250" height="100">
       </figure>
       <address class="contact-info">
-        <h3>Contact Info</h3>
+        <p class="contact-heading">Contact Info</p>
         <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><a href="mailto:someone@example.com"><i class="fas fa-globe-americas"></i> archery-education@example.com</a><br><i class="fas fa-phone-volume"></i> (253)555-1010
-      </address>  
+      </address>
     </footer>
   </div>
   </body>
