--- a/staff.html
+++ b/staff.html
@@ -34,28 +34,28 @@
       <p class="staff-intro">Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
       <section id="member-one">
         <figure>
-          <img class="profile-one"src="images/instructor-bio-image4.png" alt="staff member profile photo" width="200">
+          <img class="profile-one" src="images/instructor-bio-image4.png" alt="staff member profile photo" width="200">
         </figure>
         <h3>Giap Nguyen</h3>
         <p>Giap Nguyen started Straight to the Point Archery in 2005. He's an avid and accomplished archer himself, having competed with the United States Archery Team in the 2000 Summer Olympics. He has three children, and  started Straight to the Point in part because he was not satisfied with the archery eduction options for them in Tacoma. After The Hunger Games books and movies came out, he noticed a surge in popularity of archery among young people, especially young women, and the business has been booming ever since.</p>
       </section>
       <section id="member-two">
         <figure>
-          <img class="profile-two"src="images/instructor-bio-image1.png" alt="staff member profile photo" width="200">
+          <img class="profile-two" src="images/instructor-bio-image1.png" alt="staff member profile photo" width="200">
         </figure>
         <h3>Derek Jenkins</h3>
         <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
       </section>
       <section id="member-three">
         <figure>
-          <img class="profile-three"src="images/instructor-bio-image2.png" alt="staff member profile photo" width="200">
+          <img class="profile-three" src="images/instructor-bio-image2.png" alt="staff member profile photo" width="200">
         </figure>
         <h3>Amy Smith</h3>
         <p>Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.</p>
       </section>
       <section id="member-four">
         <figure>
-          <img class="profile-four"src="images/instructor-bio-image3.png" alt="staff member profile photo" width="200">
+          <img class="profile-four" src="images/instructor-bio-image3.png" alt="staff member profile photo" width="200">
         </figure>
         <h3>Nathan Lee</h3>
         <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
@@ -66,7 +66,7 @@
         <img src="images/archeryAcademy-logo-white.png" alt="archery academy footer image" width="250" height="100">
       </figure>
       <address class="contact-info">
-        <h3>Contact Info</h3>
+        <p class="contact-heading">Contact Info</p>
         <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><a href="mailto:someone@example.com"><i class="fas fa-globe-americas"></i> archery-education@example.com</a><br><i class="fas fa-phone-volume"></i> (253)555-1010
       </address>
     </footer>
