padding for link icons

--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
+    <a href="#main-content" class="hidden">Skip to main content</a>
   <div class="wrapper">
     <header>
       <figure class="logo-banner">
         <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
       </figure>
-      <p class="social"><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com"><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com"><i class="fab fa-yelp"></i></a></p>
+      <p class="social"><a href="https://www.facebook.com" target=_blank><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com" target=_blank><i class="fab fa-yelp"></i></a></p>
     </header>
     <nav class="main-nav">
       <a href="index.html">Home</a>
@@ -20,6 +21,8 @@
       <a href="staff.html">Staff</a>
       <a href="contact.html">Contact</a>
     </nav>
+    <section id="main-content">
+    </section>
     <section class="map">
       <h2>Straight to the Point Archery</h2>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2707.984442649868!2d-122.442195!3d47.256007499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549055a0a30c1beb%3A0x39ff45769ef4371b!2sTacoma%20City%20Hall!5e0!3m2!1sen!2sus!4v1606429326222!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
