--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
+    <a href="#main-content" class="hidden">Skip to main content</a>
     <div class="wrapper">
       <header>
         <figure class="logo-banner">
           <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
         </figure>
-        <p class="social"><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com"><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com"><i class="fab fa-yelp"></i></a></p>
+        <p class="social"><a href="https://www.facebook.com" target=_blank><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com" target=_blank><i class="fab fa-yelp"></i></a></p>
       </header>
       <nav class="main-nav">
         <a href="index.html" class="home">Home</a>
@@ -20,7 +21,7 @@
         <a href="staff.html" class="staff">Staff</a>
         <a href="contact.html" class="contact">Contact</a>
       </nav>
-      <article class="intro">
+      <article class="intro" id="main-content">
         <h1>Straight to the Point Archery</h1>
         <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors. We utilize an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field</p><p>We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques. From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport.</p><p>Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments. Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.</p><p>Staffed by instructors that are qualified level 1 and level 2 instructors and have met the safety requirements of the USA Archery (USAA). We teach in a positive learning environment.  Our instructors also have extensive knowledge of the most advanced archery equipment and all forms of archery from the traditional long bow to the modern compound. Straight to the Point Archery also has specific instructors for recreational archery, competitive archery and bow hunting.</p><p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
       </article>
