--- a/services.html
+++ b/services.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
+    <a href="#main-content" class="hidden">Skip to main content</a>
   <div class="wrapper">
     <header>
       <figure class="logo-banner">
         <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
       </figure>
-      <p class="social"><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com"><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com"><i class="fab fa-yelp"></i></a></p>
+      <p class="social"><a href="https://www.facebook.com" target=_blank><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com" target=_blank><i class="fab fa-yelp"></i></a></p>
     </header>
     <nav class="main-nav">
       <a href="index.html">Home</a>
@@ -29,6 +30,8 @@
         <li><a href="#tournaments">Tournaments</a></li>
       </ul>
     </aside>
+    <section id="main-content">
+    </section>
     <section class="services">
       <h1>Come Join Us</h1>
       <article id="classes">
