added styling for a11y

--- a/contact.html
+++ b/contact.html
@@ -8,38 +8,38 @@
   </head>
   <body>
     <a href="#main-content" class="hidden">Skip to main content</a>
-  <div class="wrapper">
-    <header>
-      <figure class="logo-banner">
-        <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
-      </figure>
-      <p class="social"><a href="https://www.facebook.com" target=_blank><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com" target=_blank><i class="fab fa-yelp"></i></a></p>
-    </header>
-    <nav class="main-nav">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="staff.html">Staff</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <section id="main-content">
-    </section>
-    <section class="map">
-      <h2>Straight to the Point Archery</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2707.984442649868!2d-122.442195!3d47.256007499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549055a0a30c1beb%3A0x39ff45769ef4371b!2sTacoma%20City%20Hall!5e0!3m2!1sen!2sus!4v1606429326222!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-    </section>
-    <section class="location">
-      <h2>Contact Us</h2>
-      <p>Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br><a href="mailto:someone@example.com"> archery-education@example.com</a> <br> (253)555-1010</p>
-    </section>
-    <footer>
-      <figure class="footer-image">
-        <img src="images/archeryAcademy-logo-white.png" alt="archery academy footer image" width="250" height="100">
-      </figure>
-      <address class="contact-info">
-        <p class="contact-heading">Contact Info</p>
-        <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><a href="mailto:someone@example.com"><i class="fas fa-globe-americas"></i> archery-education@example.com</a><br><i class="fas fa-phone-volume"></i> (253)555-1010
-      </address>
-    </footer>
-  </div>
-  </body>
-</html>
+    <div class="wrapper">
+      <header>
+        <figure class="logo-banner">
+          <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
+        </figure>
+        <p class="social"><span class="sr-only">This link opens in a new tab</span><a href="https://www.facebook.com" target=_blank><i class="fab fa-facebook-square"></i></a><span class="sr-only">This link opens in a new tab</span><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram-square"></i></a><span class="sr-only">This link opens in a new tab</span><a href="https://www.yelp.com" ><i class="fab fa-yelp"></i></a></p>
+      </header>
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="staff.html">Staff</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+      <section id="main-content">
+      </section>
+      <section class="map">
+        <h2>Straight to the Point Archery</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2707.984442649868!2d-122.442195!3d47.256007499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549055a0a30c1beb%3A0x39ff45769ef4371b!2sTacoma%20City%20Hall!5e0!3m2!1sen!2sus!4v1606429326222!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </section>
+      <section class="location">
+        <h2>Contact Us</h2>
+        <p>Straight to the Point Archery <br> 528 Nock Point Ln <br> Tacoma, WA 98412 <br><a href="mailto:someone@example.com"> archery-education@example.com</a> <br> (253)555-1010</p>
+      </section>
+      <footer>
+        <figure class="footer-image">
+          <img src="images/archeryAcademy-logo-white.png" alt="archery academy footer image" width="250" height="100">
+        </figure>
+        <address class="contact-info">
+          <p class="contact-heading">Contact Info</p>
+          <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><a href="mailto:someone@example.com"><i class="fas fa-globe-americas"></i> archery-education@example.com</a><br><i class="fas fa-phone-volume"></i> (253)555-1010
+        </address>
+      </footer>
+    </div>
+    </body>
+  </html>
