--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <figure class="logo-banner">
           <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
         </figure>
-        <p class="social"><a href="https://www.facebook.com" target=_blank><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com" target=_blank><i class="fab fa-yelp"></i></a></p>
+        <p class="social"><span class="sr-only">This link opens in a new tab</span><a href="https://www.facebook.com" target=_blank><i class="fab fa-facebook-square"></i></a><span class="sr-only">This link opens in a new tab</span><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram-square"></i></a><span class="sr-only">This link opens in a new tab</span><a href="https://www.yelp.com" ><i class="fab fa-yelp"></i></a></p>
       </header>
       <nav class="main-nav">
         <a href="index.html" class="home">Home</a>
