--- a/services.html
+++ b/services.html
@@ -8,87 +8,87 @@
   </head>
   <body>
     <a href="#main-content" class="hidden">Skip to main content</a>
-  <div class="wrapper">
-    <header>
-      <figure class="logo-banner">
-        <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
-      </figure>
-      <p class="social"><a href="https://www.facebook.com" target=_blank><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram-square"></i></a><a href="https://www.yelp.com" target=_blank><i class="fab fa-yelp"></i></a></p>
-    </header>
-    <nav class="main-nav">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="staff.html">Staff</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <aside class="services-sidebar">
-      <h3>Services</h3>
-      <ul>
-        <li><a href="#classes">Classes</a></li>
-        <li><a href="#lessons">Private Lessons</a></li>
-        <li><a href="#group-lessons">Group Events</a></li>
-        <li><a href="#tournaments">Tournaments</a></li>
-      </ul>
-    </aside>
-    <section id="main-content">
-    </section>
-    <section class="services">
-      <h1>Come Join Us</h1>
-      <article id="classes">
-        <h3>Classes:</h3>
-      		<h4>Name: A101 Basic Archery</h4>
-        		<p>Description: A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.
-        Equipment will be provided with exception of safety kit.</p>
-        		<p>Cost: $120/month</p>
-        		<p>Schedule: Mondays and Wednesdays, 4-5pm</p>
-        		<p>Prerequisite:   Interest in learning about the sport of archery. Minimum age  8 years old or 7 w/ pre-evaluation.</p>
+    <div class="wrapper">
+      <header>
+        <figure class="logo-banner">
+          <img src="images/archeryAcademy-logo-color.png" alt="archery academy logo" width=200>
+        </figure>
+        <p class="social"><span class="sr-only">This link opens in a new tab</span><a href="https://www.facebook.com" target=_blank><i class="fab fa-facebook-square"></i></a><span class="sr-only">This link opens in a new tab</span><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram-square"></i></a><span class="sr-only">This link opens in a new tab</span><a href="https://www.yelp.com" ><i class="fab fa-yelp"></i></a></p>
+      </header>
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="staff.html">Staff</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+      <aside class="services-sidebar">
+        <h3>Services</h3>
+        <ul>
+          <li><a href="#classes">Classes</a></li>
+          <li><a href="#lessons">Private Lessons</a></li>
+          <li><a href="#group-lessons">Group Events</a></li>
+          <li><a href="#tournaments">Tournaments</a></li>
+        </ul>
+      </aside>
+      <section id="main-content">
+      </section>
+      <section class="services">
+        <h1>Come Join Us</h1>
+        <article id="classes">
+          <h3>Classes:</h3>
+        		<h4>Name: A101 Basic Archery</h4>
+          		<p>Description: A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.
+          Equipment will be provided with exception of safety kit.</p>
+          		<p>Cost: $120/month</p>
+          		<p>Schedule: Mondays and Wednesdays, 4-5pm</p>
+          		<p>Prerequisite:   Interest in learning about the sport of archery. Minimum age  8 years old or 7 w/ pre-evaluation.</p>
 
-      		<h4>Name: A102 Intermediate Archery</h4>
-        		<p>Description: A102 is an intermediate archery course that focuses on intermediate archery safety, form, and introduces new equipment styles of shooting Recurve and Compound bows. Fun games and form reinforcement techniques are emphasized in this class.
-        Equipment will be provided with exception of safety kit.</p>
-        		<p>Cost: $120/month</p>
-        		<p>Schedule: Tuesdays and Thursdays, 4-5pm</p>
-        		<p>Prerequisite:A101 or recommendation from private lesson instructor. Minimum age  7 years old.</p>
+        		<h4>Name: A102 Intermediate Archery</h4>
+          		<p>Description: A102 is an intermediate archery course that focuses on intermediate archery safety, form, and introduces new equipment styles of shooting Recurve and Compound bows. Fun games and form reinforcement techniques are emphasized in this class.
+          Equipment will be provided with exception of safety kit.</p>
+          		<p>Cost: $120/month</p>
+          		<p>Schedule: Tuesdays and Thursdays, 4-5pm</p>
+          		<p>Prerequisite:A101 or recommendation from private lesson instructor. Minimum age  7 years old.</p>
 
-      		<h4>Name: A103 Advanced Archery</h4>
-        		<p>Description: After taking the A101, A102 classes, students are eligible to participate in the A103 class. This class focuses on a continued education towards tournament styles of shooting used by many archery tournament associations from around the world. Along with the tournament lesson, participants receive continued knowledge around their shooting form and advice on personal equipment selections.
-        Equipment will be provided with exception of safety kit.</p>
-        		<p>Cost: $120/month</p>
-        		<p>Schedule: Tuesdays and Thursdays, 5-6pm</p>
-        		<p>Prerequisite:  A101/A102 or equivalent. Minimum age  7 years old.</p>
-      </article>
-      <article id="lessons">
-        <h3>Private Lessons:</h3>
-      		<h4>Type: Single Lesson</h4>
-        		<p>Description: 1 hour of expert guidance by a USA Archery-certified coach</p>
-        		<p>Price: $50</p>
+        		<h4>Name: A103 Advanced Archery</h4>
+          		<p>Description: After taking the A101, A102 classes, students are eligible to participate in the A103 class. This class focuses on a continued education towards tournament styles of shooting used by many archery tournament associations from around the world. Along with the tournament lesson, participants receive continued knowledge around their shooting form and advice on personal equipment selections.
+          Equipment will be provided with exception of safety kit.</p>
+          		<p>Cost: $120/month</p>
+          		<p>Schedule: Tuesdays and Thursdays, 5-6pm</p>
+          		<p>Prerequisite:  A101/A102 or equivalent. Minimum age  7 years old.</p>
+        </article>
+        <article id="lessons">
+          <h3>Private Lessons:</h3>
+        		<h4>Type: Single Lesson</h4>
+          		<p>Description: 1 hour of expert guidance by a USA Archery-certified coach</p>
+          		<p>Price: $50</p>
 
-      		<h4>Type: 3 Lesson Package</h4>
-        		<p>Description: 3 lessons, 1 hour each of expert guidance by a USA Archery-certified coach</p>
-        		<p>Price: $140</p>
+        		<h4>Type: 3 Lesson Package</h4>
+          		<p>Description: 3 lessons, 1 hour each of expert guidance by a USA Archery-certified coach</p>
+          		<p>Price: $140</p>
 
-      		<h4>Type: 10 Lesson Package</h4>
-        		<p>Description: 10 lessons, 1 hour each of expert guidance by a USA Archery-certified coach</p>
-        		<p>Price: $380</p>
-      </article>
-      <article id="group-lessons">
-        <h3>Group Lessons</h3>
-          <h4>Call Us Ahead To Book Group Lessons/Events!</h4>
-      </article>
-      <article id="tournaments">
-        <h3>Tournaments</h3>
-          <h4>Due to Covid-19 Restrictions Tournament scheduling is still underway. Calendar will be posted soon! Followed by registraion information.</h4>
-      </article>
-    </section>
-    <footer>
-      <figure class="footer-image">
-        <img src="images/archeryAcademy-logo-white.png" alt="archery academy footer image" width="250" height="100">
-      </figure>
-      <address class="contact-info">
-        <p class="contact-heading">Contact Info</p>
-        <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><a href="mailto:someone@example.com"><i class="fas fa-globe-americas"></i> archery-education@example.com</a><br><i class="fas fa-phone-volume"></i> (253)555-1010
-      </address>
-    </footer>
-  </div>
-  </body>
-</html>
+        		<h4>Type: 10 Lesson Package</h4>
+          		<p>Description: 10 lessons, 1 hour each of expert guidance by a USA Archery-certified coach</p>
+          		<p>Price: $380</p>
+        </article>
+        <article id="group-lessons">
+          <h3>Group Lessons</h3>
+            <h4>Call Us Ahead To Book Group Lessons/Events!</h4>
+        </article>
+        <article id="tournaments">
+          <h3>Tournaments</h3>
+            <h4>Due to Covid-19 Restrictions Tournament scheduling is still underway. Calendar will be posted soon! Followed by registraion information.</h4>
+        </article>
+      </section>
+      <footer>
+        <figure class="footer-image">
+          <img src="images/archeryAcademy-logo-white.png" alt="archery academy footer image" width="250" height="100">
+        </figure>
+        <address class="contact-info">
+          <p class="contact-heading">Contact Info</p>
+          <i class="fas fa-building"></i> Straight to the Point Archery <br><i class="fas fa-map-marked-alt"></i> 528 Nock Point Ln Tacoma, WA 98412 <br><a href="mailto:someone@example.com"><i class="fas fa-globe-americas"></i> archery-education@example.com</a><br><i class="fas fa-phone-volume"></i> (253)555-1010
+        </address>
+      </footer>
+    </div>
+    </body>
+  </html>
