added heading for main content

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <section id="main-content">
+        <h2 class="skip-link">content</h2>
       </section>
       <section class="map">
         <h2>Straight to the Point Archery</h2>
