--- a/services.html
+++ b/services.html
@@ -30,8 +30,7 @@
           <li><a href="#tournaments">Tournaments</a></li>
         </ul>
       </aside>
-      <section id="main-content">
-      </section>
+      <section id="main-content"><h2 class="skip-link">content</h2></section>
       <section class="services">
         <h1>Come Join Us</h1>
         <article id="classes">
