--- a/staff.html
+++ b/staff.html
@@ -31,6 +31,8 @@
        </ul>
       </aside>
       <section id="main-content">
+        <h2 class="skip-link">content</h2>
+      </section>  
       <article class="profiles">
         <h1>Meet the Team</h1>
         <p class="staff-intro">Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
